--- a/info.html
+++ b/info.html
@@ -6,21 +6,23 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
-/* ===== BASE ===== */
-body {
-  margin:0;
-  font-family:Arial, sans-serif;
-  background:#eef2f6;
-  color:#111;
+/* ===== RTL FIX ===== */
+html[dir="rtl"] body {
+  direction: rtl;
+  unicode-bidi: isolate;
 }
 
+p, h1, h2, h3, li {
+  direction: rtl;
+  unicode-bidi: plaintext;
+}
+
+/* ===== BASE ===== */
+body { margin:0; font-family:Arial, sans-serif; background:#eef2f6; color:#111; }
+
 header {
-  background:#0b2a5b;
-  color:#fff;
-  padding:15px 25px;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
+  background:#0b2a5b; color:#fff; padding:15px 25px;
+  display:flex; justify-content:space-between; align-items:center;
 }
 
 .brand { font-size:20px; font-weight:bold; }
@@ -56,34 +58,6 @@ h1,h2,h3 { color:#0b2a5b; }
   color:#666;
   padding:25px;
 }
-
-/* ===== RTL ONLY ===== */
-html[dir="rtl"] body {
-  direction: rtl;
-}
-
-html[dir="rtl"] p,
-html[dir="rtl"] h1,
-html[dir="rtl"] h2,
-html[dir="rtl"] h3,
-html[dir="rtl"] li {
-  direction: rtl;
-  unicode-bidi: plaintext;
-}
-
-/* ===== LTR ONLY ===== */
-html[dir="ltr"] body {
-  direction: ltr;
-}
-
-html[dir="ltr"] p,
-html[dir="ltr"] h1,
-html[dir="ltr"] h2,
-html[dir="ltr"] h3,
-html[dir="ltr"] li {
-  direction: ltr;
-  unicode-bidi: normal;
-}
 </style>
 </head>
 
@@ -115,19 +89,44 @@ html[dir="ltr"] li {
 
 <h2>רקע כללי על היוזמה</h2>
 <p>
-היוזמה נולדה מתוך רצון לחזק את הקשר בין הקהילה, השחקנים והמערכת המקצועית.
+היוזמה נולדה מתוך רצון לחזק את הקשר בין הקהילה, השחקנים והמערכת המקצועית,
+ולאפשר חוויות עומק למשתתפים שנמצאו מתאימים על פי קריטריונים מוגדרים מראש.
 </p>
 
 <h2>מה כולל האירוע?</h2>
 <ul>
   <li>משחק כדורגל ייעודי בפורמט מיוחד</li>
-  <li>נוכחות גורמים מקצועיים</li>
-  <li>ליווי לוגיסטי</li>
+  <li>נוכחות גורמים מקצועיים ואנשי צוות</li>
+  <li>תיאום מוקדם וליווי לוגיסטי</li>
+  <li>חוויה שאינה חלק מלוח משחקים רגיל</li>
 </ul>
 
 <h2>כיצד פועל מנגנון הבחירה?</h2>
 <p>
-בחירה אוטומטית המבוססת על נתונים.
+מערכת הבחירה פועלת באופן אוטומטי ומבוססת נתונים. הבחירה אינה אקראית
+ואינה מבוססת הרשמה פתוחה.
+</p>
+
+<h2>מדוע קיבלת את ההזמנה?</h2>
+<p>
+הפרופיל שלך נמצא תואם לקריטריונים של אחד האירועים הקרובים.
+</p>
+
+<h2>שלבים לאחר אישור השתתפות</h2>
+<p>
+לאחר האישור יישלחו פרטים משלימים הכוללים מיקום, שעות והנחיות כלליות.
+</p>
+
+<h3>הבהרות חשובות</h3>
+<ul>
+  <li>מספר המקומות מוגבל</li>
+  <li>האירוע מיועד למוזמנים בלבד</li>
+  <li>אין להעביר את ההזמנה לצד שלישי</li>
+  <li>ייתכנו שינויים ארגוניים</li>
+</ul>
+
+<p>
+אנו ממליצים לקרוא מידע זה בעיון לפני קבלת החלטה.
 </p>
 
 </div>
@@ -135,9 +134,8 @@ html[dir="ltr"] li {
 <div class="footer">© 2026 Netanya Football Organization</div>
 
 <script>
-const translations = {
-en: `
-<a class="back" href="index.html"><span>←</span> Back to invitation</a>
+const translations={
+en:`<a class="back" href="index.html"><span>←</span> Back to invitation</a>
 <h1>Special Invitation Program – Full Information</h1>
 <p>Netanya Football operates a selective invitation initiative throughout the year.</p>
 <h2>Program background</h2>
@@ -148,10 +146,13 @@ en: `
 <li>Professional staff presence</li>
 <li>Logistical coordination</li>
 </ul>
-`,
-
-fr: `
-<a class="back" href="index.html"><span>←</span> Retour à l'invitation</a>
+<h2>Selection mechanism</h2>
+<p>Automatic data-based selection. Not open registration.</p>
+<h2>Why you were selected</h2>
+<p>Your profile matched the event criteria.</p>
+<h2>After confirmation</h2>
+<p>Additional details will be sent closer to the date.</p>`,
+fr:`<a class="back" href="index.html"><span>←</span> Retour à l'invitation</a>
 <h1>Programme d'invitation spéciale – Informations complètes</h1>
 <p>Netanya Football organise une initiative sélective.</p>
 <h2>Contexte</h2>
@@ -161,10 +162,9 @@ fr: `
 <li>Match dédié</li>
 <li>Équipe professionnelle</li>
 </ul>
-`,
-
-ar: `
-<a class="back" href="index.html"><span>←</span> العودة إلى الدعوة</a>
+<h2>Sélection</h2>
+<p>Sélection automatique basée sur les données.</p>`,
+ar:`<a class="back" href="index.html"><span>←</span> العودة إلى الدعوة</a>
 <h1>برنامج الدعوة الخاصة – معلومات كاملة</h1>
 <p>تنظم كرة قدم نتانيا مبادرة انتقائية.</p>
 <h2>الخلفية</h2>
@@ -174,26 +174,27 @@ ar: `
 <li>مباراة مخصصة</li>
 <li>طاقم محترف</li>
 </ul>
-`
+<h2>آلية الاختيار</h2>
+<p>اختيار تلقائي قائم على البيانات.</p>`
 };
 
-function changeLang(lang) {
-  if (lang === "he") {
-    document.documentElement.lang = "he";
-    document.documentElement.dir = "rtl";
+function changeLang(l){
+  if(l==="he"){
+    document.documentElement.lang="he";
+    document.documentElement.dir="rtl";
     location.reload();
     return;
   }
 
-  if (lang === "ar") {
-    document.documentElement.lang = "ar";
-    document.documentElement.dir = "rtl";
+  if(l==="ar"){
+    document.documentElement.lang="ar";
+    document.documentElement.dir="rtl";
   } else {
-    document.documentElement.lang = lang;
-    document.documentElement.dir = "ltr";
+    document.documentElement.lang=l;
+    document.documentElement.dir="ltr";
   }
 
-  document.getElementById("content").innerHTML = translations[lang];
+  document.getElementById("content").innerHTML=translations[l];
 }
 </script>
 
