--- a/info.html
+++ b/info.html
@@ -103,7 +103,7 @@ html[dir="ltr"] li {
 
 <div class="container" id="content">
 
-<a class="back" href="#" onclick="goBack()"><span>←</span> חזרה להזמנה</a>
+<a class="back" href="index.html"><span>←</span> חזרה להזמנה</a>
 
 <h1>תוכנית ההזמנות המיוחדות – מידע מלא</h1>
 
