--- a/info.html
+++ b/info.html
@@ -57,11 +57,8 @@ h1,h2,h3 { color:#0b2a5b; }
   padding:25px;
 }
 
-/* ===== RTL ONLY ===== */
-html[dir="rtl"] body {
-  direction: rtl;
-}
-
+/* ===== RTL ===== */
+html[dir="rtl"] body { direction: rtl; }
 html[dir="rtl"] p,
 html[dir="rtl"] h1,
 html[dir="rtl"] h2,
@@ -71,11 +68,8 @@ html[dir="rtl"] li {
   unicode-bidi: plaintext;
 }
 
-/* ===== LTR ONLY ===== */
-html[dir="ltr"] body {
-  direction: ltr;
-}
-
+/* ===== LTR ===== */
+html[dir="ltr"] body { direction: ltr; }
 html[dir="ltr"] p,
 html[dir="ltr"] h1,
 html[dir="ltr"] h2,
@@ -103,7 +97,7 @@ html[dir="ltr"] li {
 
 <div class="container" id="content">
 
-<a class="back" href="#" onclick="goBack()"><span>←</span> חזרה להזמנה</a>
+<a class="back" onclick="goBack()"><span>←</span> חזרה להזמנה</a>
 
 <h1>תוכנית ההזמנות המיוחדות – מידע מלא</h1>
 
@@ -129,8 +123,8 @@ html[dir="ltr"] li {
 
 <h2>כיצד פועל מנגנון הבחירה?</h2>
 <p>
-מערכת הבחירה פועלת באופן אוטומטי ומבוססת נתונים. הבחירה אינה אקראית
-ואינה מבוססת הרשמה פתוחה.
+מערכת הבחירה פועלת באופן אוטומטי ומבוססת נתונים.
+הבחירה אינה אקראית ואינה מבוססת הרשמה פתוחה.
 </p>
 
 <h2>מדוע קיבלת את ההזמנה?</h2>
@@ -160,12 +154,15 @@ html[dir="ltr"] li {
 <div class="footer">© 2026 Netanya Football Organization</div>
 
 <script>
+/* ===== SAFE BACK ===== */
 function goBack(){
-  window.location.href = "index.html";
+  window.location.href = "./index.html";
 }
 
-const translations={
-en:`<a class="back" href="#" onclick="goBack()"><span>←</span> Back to invitation</a>
+/* ===== TRANSLATIONS ===== */
+const translations = {
+en: `
+<a class="back" onclick="goBack()"><span>←</span> Back to invitation</a>
 <h1>Special Invitation Program – Full Information</h1>
 <p>Netanya Football operates a selective invitation initiative throughout the year.</p>
 <h2>Program background</h2>
@@ -181,8 +178,10 @@ en:`<a class="back" href="#" onclick="goBack()"><span>←</span> Back to invitat
 <h2>Why you were selected</h2>
 <p>Your profile matched the event criteria.</p>
 <h2>After confirmation</h2>
-<p>Additional details will be sent closer to the date.</p>`,
-fr:`<a class="back" href="#" onclick="goBack()"><span>←</span> Retour à l'invitation</a>
+<p>Additional details will be sent closer to the date.</p>
+`,
+fr: `
+<a class="back" onclick="goBack()"><span>←</span> Retour à l'invitation</a>
 <h1>Programme d'invitation spéciale – Informations complètes</h1>
 <p>Netanya Football organise une initiative sélective.</p>
 <h2>Contexte</h2>
@@ -193,8 +192,10 @@ fr:`<a class="back" href="#" onclick="goBack()"><span>←</span> Retour à l'inv
 <li>Équipe professionnelle</li>
 </ul>
 <h2>Sélection</h2>
-<p>Sélection automatique basée sur les données.</p>`,
-ar:`<a class="back" href="#" onclick="goBack()"><span>←</span> العودة إلى الدعوة</a>
+<p>Sélection automatique basée sur les données.</p>
+`,
+ar: `
+<a class="back" onclick="goBack()"><span>←</span> العودة إلى الدعوة</a>
 <h1>برنامج الدعوة الخاصة – معلومات كاملة</h1>
 <p>تنظم كرة قدم نتانيا مبادرة انتقائية.</p>
 <h2>الخلفية</h2>
@@ -205,26 +206,21 @@ ar:`<a class="back" href="#" onclick="goBack()"><span>←</span> العودة إ
 <li>طاقم محترف</li>
 </ul>
 <h2>آلية الاختيار</h2>
-<p>اختيار تلقائي قائم على البيانات.</p>`
+<p>اختيار تلقائي قائم على البيانات.</p>
+`
 };
 
-function changeLang(l){
-  if(l==="he"){
-    document.documentElement.lang="he";
-    document.documentElement.dir="rtl";
+function changeLang(lang){
+  if(lang === "he"){
+    document.documentElement.lang = "he";
+    document.documentElement.dir = "rtl";
     location.reload();
     return;
   }
 
-  if(l==="ar"){
-    document.documentElement.lang="ar";
-    document.documentElement.dir="rtl";
-  } else {
-    document.documentElement.lang=l;
-    document.documentElement.dir="ltr";
-  }
-
-  document.getElementById("content").innerHTML=translations[l];
+  document.documentElement.lang = lang;
+  document.documentElement.dir = (lang === "ar") ? "rtl" : "ltr";
+  document.getElementById("content").innerHTML = translations[lang];
 }
 </script>
 
